MAJOR_NUM=1 MINOR_NUM=3 AUX_NUM=0 update package and configs

--- a/finit.conf
+++ b/finit.conf
@@ -4,8 +4,12 @@ host qemu
 # Runlevel to start after bootstrap
 runlevel 2
 # Services to be monitored and respawned as needed
-service [2345] /sbin/klogd -n    -- Kernel logging server
-service [2345] /sbin/syslogd -n  -- Syslog server
+service [2345] /sbin/klogd -n -- Kernel logging server
+service [2345] /sbin/syslogd -n -- Syslog server
+service [2345] /usr/sbin/crond -f -- Cron Daemon
 service [2345] /bin/dropbear -F -s -g -r /tmp/dropbear/rsa.key -- SSH server
+service [2345] /usr/bin/iopclauncher -- IOPC Daemon
+service [2345] /www/go_web /www/html/ -- WWW Daemon
 # Network bringup not needed if /etc/network/interfaces is used.
-task [2345] /sbin/ifup -a        -- Networking
+task [2345] /sbin/ifup -a -- Networking
+#task [2345] /usr/sbin/ntpd -nqp watch.stdtime.gov.tw -- NTP sync
