MAJOR_NUM=1 MINOR_NUM=5 AUX_NUM=0 update package

--- a/finit.conf
+++ b/finit.conf
@@ -3,6 +3,7 @@ user root
 host qemu
 # Runlevel to start after bootstrap
 runlevel 2
+tty [2345] /dev/ttyAMA0 115200 vt100 noclear
 # Services to be monitored and respawned as needed
 service [2345] /sbin/klogd -n -- Kernel logging server
 service [2345] /sbin/syslogd -n -- Syslog server
@@ -13,3 +14,4 @@ service [2345] /usr/bin/iopclauncher -- IOPC Daemon
 # Network bringup not needed if /etc/network/interfaces is used.
 #task [2345] /sbin/ifup -a -- Networking
 #task [2345] /usr/sbin/ntpd -nqp watch.stdtime.gov.tw -- NTP sync
+
